docs: change tables tag name and add a description
